[package]
name = "sulis"
version = "0.2.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
license = "GPLv3"
description = "An RPG with Turn Based Combat"
repository = "https://github.com/Grokmoo/sulis"

[workspace]
members = [
    "sulis_core",
    "sulis_editor",
	"sulis_rules",
	"sulis_module",
	"sulis_state",
	"sulis_view",
    "sulis_widgets",
]

[dependencies]
sulis_core = { path = "sulis_core" }
sulis_rules = { path = "sulis_rules" }
sulis_module = { path = "sulis_module" }
sulis_state = { path = "sulis_state" }
sulis_view = { path = "sulis_view" }
sulis_widgets = { path = "sulis_widgets" }

log = "0.4"
