[package]
name = "sulis"
version = "1.0.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
license = "GPLv3"
description = "An RPG with Turn Based Combat"
repository = "https://github.com/Grokmoo/sulis"
edition = "2021"

[workspace]
members = [
    "sulis_core",
    "sulis_editor",
    "sulis_module",
    "sulis_state",
    "sulis_view",
]

[workspace.dependencies]
base64 = "0.21"
chrono = "0.4"
home = "0.5"
flexi_logger = { version = "0.25", default_features = false }
glium = "0.32"
image = { version = "0.24", default_features = false, features = [ "png" ] }
indexmap = "1"
lazy_static = "1"
log = { version = "0.4", features = [ "serde" ] }
open = "1"
rand = "0.8"
rand_pcg = { version = "0.3", features = [ "serde1" ] }
rlua = "0.19"
rodio = { version = "0.17", default_features = false, features = [ "vorbis" ] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
serde_json = "1"

[dependencies]
sulis_core = { path = "sulis_core" }
sulis_module = { path = "sulis_module" }
sulis_state = { path = "sulis_state" }
sulis_view = { path = "sulis_view" }

log = { workspace = true }
