[package]
name = "grt"
version = "0.1.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]

[dependencies]
image = "0.18"
glium = "0.19"
lazy_static = "1.0"
log = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
serde_yaml = "0.7"

[target.'cfg(not(windows))'.dependencies]
termion = "1.5.1"

[target.'cfg(windows)'.dependencies]
pancurses = "0.13.0"
