[package]
name = "sulis_core"
version = "0.5.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
edition = "2018"

[dependencies]
home = "0.5"
backtrace = "0.3"
flexi_logger = { version = "0.15", default_features = false }
image = { version = "0.23", default_features = false, features = [ "png" ] }
glium = "0.27"
lazy_static = "1.4"
log = { version = "0.4", features = [ "serde" ] }
rand = "0.7"
rand_pcg = { version = "0.2", features = [ "serde1" ] }
serde = "1.0"
serde_derive = "1.0"
serde_yaml = "0.8"
serde_json = "1.0"
rlua = "0.17"
rodio = { version = "0.11", default_features = false, features = [ "vorbis" ] }
