[package]
name = "sulis_core"
version = "0.6.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
edition = "2021"

[dependencies]
home = "0.5"
flexi_logger = { version = "0.25", default_features = false }
image = { version = "0.24", default_features = false, features = [ "png" ] }
glium = "0.32"
lazy_static = "1"
log = { version = "0.4", features = [ "serde" ] }
rand = "0.8"
rand_pcg = { version = "0.3", features = [ "serde1" ] }
serde = "1.0"
serde_derive = "1"
serde_yaml = "0.8"
serde_json = "1"
rlua = "0.19"
rodio = { version = "0.17", default_features = false, features = [ "vorbis" ] }
