[package]
name = "sulis_core"
version = "1.0.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
edition = "2021"

[lints]
workspace = true

[dependencies]
home = { workspace = true }
flexi_logger = { workspace = true }
image = { workspace = true }
glium = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rand_pcg  = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
rlua = { workspace = true }
rodio = { workspace = true }
