[package]
name = "sulis_editor"
version = "0.1.1"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]

[dependencies]
sulis_core = { path = "../sulis_core" }
sulis_module = { path = "../sulis_module" }
sulis_rules = { path = "../sulis_rules" }
sulis_state = { path = "../sulis_state" }
sulis_widgets = { path = "../sulis_widgets" }

log = "0.4"
rand = "0.5"
serde = "1.0"
