[package]
name = "sulis_module"
version = "1.0.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
edition = "2021"

[lints]
workspace = true

[dependencies]
sulis_core = { path = "../sulis_core" }

log = { workspace = true }
serde = {workspace = true }
base64 = {workspace = true }
indexmap = { workspace = true }