[package]
name = "sulis_state"
version = "0.5.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
edition = "2018"

[dependencies]
sulis_core = { path = "../sulis_core" }
sulis_module = { path = "../sulis_module" }

log = "0.4"
chrono = "0.4"
rlua = "0.17"
serde = "1.0"
serde_derive = "1.0"
