[package]
name = "sulis_state"
version = "1.0.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
edition = "2021"

[dependencies]
sulis_core = { path = "../sulis_core" }
sulis_module = { path = "../sulis_module" }

log = "0.4"
chrono = "0.4"
rlua = "0.19"
serde = "1"
serde_derive = "1"
