[package]
name = "sulis_state"
version = "1.0.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
edition = "2021"

[lints]
workspace = true

[dependencies]
sulis_core = { path = "../sulis_core" }
sulis_module = { path = "../sulis_module" }

log = { workspace = true }
chrono = { workspace = true }
rlua = { workspace = true }
serde = { workspace = true }
