[package]
name = "sulis_view"
version = "0.2.2"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
edition = "2018"

[dependencies]
sulis_core = { path = "../sulis_core" }
sulis_module = { path = "../sulis_module" }
sulis_state = { path = "../sulis_state" }

log = "0.4"
chrono = "0.4"
open = "1.2"
rlua = "0.16"
