[package]
name = "sulis_view"
version = "0.6.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
edition = "2021"

[dependencies]
sulis_core = { path = "../sulis_core" }
sulis_module = { path = "../sulis_module" }
sulis_state = { path = "../sulis_state" }

log = "0.4"
chrono = "0.4"
open = "1"
rlua = "0.19"