[package]
name = "sulis_view"
version = "1.0.0"
authors = ["Jared Stephen <grok_moo@yahoo.com>"]
edition = "2021"

[dependencies]
sulis_core = { path = "../sulis_core" }
sulis_module = { path = "../sulis_module" }
sulis_state = { path = "../sulis_state" }

log = { workspace = true }
chrono = { workspace = true }
open = { workspace = true }
rlua = { workspace = true }